Update dependencies; Use `var` if possible